# homelab-infra

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  debug_env.yml  pyproject.toml  report.html
.github/: copilot-instructions.md
.github/workflows/: ansible-test.yml  ci.yml  molecule-tests.yml
ansible/: README.md  ansible.cfg  load_env.sh  test-wrapper.sh  test.env
ansible/group_vars/: all.yml  homelab.yml
ansible/inventory/: homelab.yml
ansible/playbooks/: initial_setup.yml  k3s_cluster.yml  ssh-key-auth.yml  ssh_setup.yml  static-ip-config.yml
ansible/roles/common/: report.html
ansible/roles/common/defaults/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: firewall.yml  main.yml  ntp.yml  packages.yml  security.yml  timezone.yml  utilities.yml
ansible/roles/common/templates/: chrony.conf.j2  limits.conf.j2  pwquality.conf.j2  sshd_config.j2
ansible/roles/common/tests/: test.yml
ansible/roles/common/vars/: ubuntu.yml
ansible/roles/home_assistant_integration/: report.html
ansible/roles/home_assistant_integration/defaults/: main.yml
ansible/roles/home_assistant_integration/handlers/: main.yml
ansible/roles/home_assistant_integration/tasks/: influxdb.yml  main.yml  mqtt.yml  ssh.yml  voice_assistant.yml
ansible/roles/home_assistant_integration/templates/: authorized_keys.j2  influxdb.j2  influxdb_integration.j2  mosquitto.j2  mqtt.j2  ssh.j2  voice_assistant.j2  wyoming.j2
ansible/roles/home_assistant_integration/tests/: test-sudo-wrapper.sh  test.yml
ansible/roles/jetson_setup/: report.html
ansible/roles/k3s_agent/: report.html
ansible/roles/k3s_server/: report.html
docs/: cloudflare-domain-setup.md  recovery-procedures.md  resume_work_promt.md  run-all-tests.md  scaling-considerations.md  security-architecture.md  security-maintenance.md  ssh-keys-troubleshooting.md  testing.md  testing_checklist.md  testing_spec.md
docs-site/: docusaurus.config.ts  sidebars.ts
docs-site/docs/: implementation-roadmap.md  troubleshooting-guide.md
docs-site/docs/api/: automation-webhooks.md  custom-ai.md  data-integration.md  index.md  internal-utility.md  triton.md
docs-site/docs/architecture/: c4_container_diagram.md  component_relationship_diagram.md  copilot-prompts-ai-data.md  copilot-prompts-automation.md  copilot-prompts-infrastructure.md  copilot-prompts-security-ops.md  data_flow_diagram.md  deployment-checklist.md  deployment_sequence_diagram.md  future-expansion.md  interaction_diagram.md  testing-strategy.md
docs-site/docs/runbooks/: adding-new-node.md  failure-recovery.md  investigating-alerts.md  onboarding-new-service.md  security-incident-response.md  system-updates.md
docs/diagrams/: network-architectuture.md
homelab_infra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
monitoring/auth/: prometheus-auth.yaml
monitoring/correlator/: deployment.yaml  log_metric_correlator.py
monitoring/prometheus/: alert-rules.yaml
pulumi/: scratch.md
pulumi/automation/src/: n8n.ts  n8nApiKeys.ts  n8nAuth.ts
pulumi/cluster-setup/: Pulumi.yaml  index.ts  openEBS.ts  openEBSTypes.ts  package.json  tsconfig.json
pulumi/cluster-setup/src/: automationNamespace.ts  clusterSetup.ts  dataNamespace.ts  index.ts  k8sProvider.ts  monitoringNamespace.ts
pulumi/core-services/: Pulumi.yaml  index.ts  package.json  tsconfig.json
pulumi/core-services/src/: certManager.ts  index.ts  traefik.ts
pulumi/data/: package.json
pulumi/data/src/: n8nRedis.ts  rabbitDefinitions.ts  rabbitmqCluster.ts  rabbitmqManagementUI.ts  rabbitmqOperator.ts
pulumi/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml  verify_project.yml
pulumi/molecule/tests/: pulumi_test_helpers.py  test_pulumi_integration.py  test_pulumi_stacks.py
pulumi/networking/src/: cloudfareTunnels.ts  databaseNetworking.ts  externalDns.ts  externalServiceAccess.ts  internalAPIGateway.ts  localDNS.ts  networkMonitoring.ts  networkPolicies.ts  rabbitmqNetworking.ts  rayNetworking.ts  serviceMesh.ts  tritonNetworking.ts
pulumi/observability/src/: alertManager.ts  deployAll.ts  grafana.ts  grafanaDashboards.ts  loki.ts  notificationChannels.ts  openTelemetryOperator.ts  prometheus.ts  prometheusRules.ts  serviceMonitors.ts  tempo.ts
pulumi/security/src/: apiGatewaySecurity.ts  authelia.ts  cloudflareTunnels.ts  hashiCorpVault.ts  heimdall.ts  internalTls.ts  kubernetesRbac.ts  networkPolicies.ts  securityMonitoring.ts  serviceMesh.ts  tailscale.ts  traefikAuthelia.ts  vaultKubernetesIntegration.ts  vaultWarden.ts
pulumi/storage/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json  tsconfig.json
pulumi/storage/src/: index.ts  n8nPostgres.ts  n8nStorage.ts  openEBS.ts  volumeSnapshots.ts
scripts/: README.md  application-backup.py  config-backup.py  config.json  deploy-ansible.sh  deploy-correlator.sh  deploy-dashboards.sh  deploy-pulumi.sh  health-check.py  intrusion-detection.py  manage-dependencies.py  migrate_traefik.sh  offsite-backup.py  pulumi_env.sh  pulumi_setup.sh  resource-forecasting.py  run-all-tests.sh  run-molecule-tests.sh  secret-rotation.py  secure-config-management.py  security-response-automation.py  security-testing-framework.py  setup-test-environment.sh  setup_jest.sh  system-update.py  test-ansible.sh  test-home-assistant.sh  test-k3s-server.sh  test-pulumi.sh  test-wrapper.sh
scripts/optimization/: analyze_db_performance.py  analyze_k8s_resources.py  analyze_network_performance.py  analyze_resource_usage.py  identify_app_bottlenecks.py
scripts/recovery/: detect_db_corruption.py  recover_config.py  recover_network.py  recover_node.py  recover_service.py
tests/: conftest.py  dns-tests.py  network-policy-tests.py  network-testing-framework.py  recovery-testing-framework.py  test_k8s_metrics.py  test_loki_integration.py  test_metrics_integration.py  test_prometheus_integration.py
tests/network-validation-tests/: test_network_validation.py
tests/utils/: logging_helper.py  metrics_helper.py  prometheus_helper.py  testinfra_prometheus.py
(+107 files in other folders)
